# vultr_speed

./: Cargo.toml  README.md
scripts/: my_speed_download.sh  my_speed_ping.sh
src/: main.rs
