[package]
name = "vultr_speed"
version = "0.1.0"
authors = ["William Wong <goodwong@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.0.0"
reqwest = "0.10.0-alpha.2"
tokio = "0.2.0-alpha.6"
async-std = "1.3"
chrono = "0.4.10"
termion = { git = "https://github.com/mcgoo/termion", branch = "windows" }